Add mobile theme toggle, scroll-to-top for comparisons, and update tab title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ai Bunty — AI-Powered Business Growth Platform | CRM, WhatsApp Automation & Funnels</title>
+    <title>Dcore Systems | Start Your Automation Journey</title>
     <meta name="description" content="Ai Bunty is your AI-powered business growth partner. Funnels, CRM, WhatsApp automation, payments, team management & growth tools — all in one platform for Indian businesses." />
     <meta name="author" content="Ai Bunty" />
     <meta name="keywords" content="CRM software, WhatsApp automation, business growth, marketing funnels, lead management, Indian SaaS, coaching CRM, real estate CRM" />
