--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dcore Systems | Start Your Automation Journey</title>
     <meta name="description" content="Ai Bunty is your AI-powered business growth partner. Funnels, CRM, WhatsApp automation, payments, team management & growth tools — all in one platform for Indian businesses." />
-    <meta name="author" content="Ai Bunty" />
+    <meta name="author" content="DCORE SYSTEMS LLP" />
     <meta name="keywords" content="CRM software, WhatsApp automation, business growth, marketing funnels, lead management, Indian SaaS, coaching CRM, real estate CRM" />
     
     <link rel="icon" type="image/png" href="/dcore-favicon.png" />
@@ -32,6 +32,47 @@
     <meta name="twitter:title" content="Ai Bunty — AI-Powered Business Growth Platform" />
     <meta name="twitter:description" content="Funnels, CRM, WhatsApp automation, payments & growth tools — all in one platform." />
     <meta name="twitter:image" content="https://aibunty.com/og-image.png" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "DCORE SYSTEMS LLP",
+      "url": "https://dcoresystems.com",
+      "logo": "https://dcoresystems.com/dcore-logo.png",
+      "description": "AI-powered business growth platform with CRM, WhatsApp automation, funnels, and payment collection for Indian businesses.",
+      "email": "support@dcoresystems.com",
+      "telephone": "+91 88560 91300",
+      "foundingDate": "2026-01-05",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "BLDG C FLAT NO 7 S NO 244 BANER PUSHPANAGAR D P",
+        "addressLocality": "Aundh Haveli",
+        "addressRegion": "Maharashtra",
+        "postalCode": "411007",
+        "addressCountry": "IN",
+        "name": "Registered Office"
+      },
+      "additionalProperty": [
+        {
+          "@type": "PropertyValue",
+          "name": "LLPIN",
+          "value": "ACT-9625"
+        },
+        {
+          "@type": "PropertyValue",
+          "name": "GSTIN",
+          "value": "27AAZFD2232J1Z3"
+        }
+      ],
+      "sameAs": [
+        "https://facebook.com",
+        "https://twitter.com",
+        "https://linkedin.com",
+        "https://instagram.com"
+      ]
+    }
+    </script>
 
     <script type="application/ld+json">
     {
