--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dcore Systems | Start Your Automation Journey</title>
-    <meta name="description" content="Ai Bunty is your AI-powered business growth partner. Funnels, CRM, WhatsApp automation, payments, team management & growth tools — all in one platform for Indian businesses." />
-    <meta name="author" content="DCORE SYSTEMS LLP" />
-    <meta name="keywords" content="CRM software, WhatsApp automation, business growth, marketing funnels, lead management, Indian SaaS, coaching CRM, real estate CRM" />
+    <title>Dcore Systems</title>
+    <meta name="author" content="Dcore Systems LLP" />
     
     <link rel="icon" type="image/png" href="/dcore-favicon.png" />
     <script type="module">
@@ -18,77 +16,8 @@
       link.href = faviconUrl;
       if (!existing) document.head.appendChild(link);
     </script>
-    <link rel="canonical" href="https://aibunty.com" />
-
-    <meta property="og:title" content="Ai Bunty — AI-Powered Business Growth Platform" />
-    <meta property="og:description" content="Funnels, CRM, WhatsApp automation, payments & growth tools — all in one platform for Indian businesses." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aibunty.com" />
-    <meta property="og:image" content="https://aibunty.com/og-image.png" />
-    <meta property="og:site_name" content="Ai Bunty" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@AiBunty" />
-    <meta name="twitter:title" content="Ai Bunty — AI-Powered Business Growth Platform" />
-    <meta name="twitter:description" content="Funnels, CRM, WhatsApp automation, payments & growth tools — all in one platform." />
-    <meta name="twitter:image" content="https://aibunty.com/og-image.png" />
-
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "DCORE SYSTEMS LLP",
-      "url": "https://dcoresystems.com",
-      "logo": "https://dcoresystems.com/dcore-logo.png",
-      "description": "AI-powered business growth platform with CRM, WhatsApp automation, funnels, and payment collection for Indian businesses.",
-      "email": "support@dcoresystems.com",
-      "telephone": "+91 88560 91300",
-      "foundingDate": "2026-01-05",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "BLDG C FLAT NO 7 S NO 244 BANER PUSHPANAGAR D P",
-        "addressLocality": "Aundh Haveli",
-        "addressRegion": "Maharashtra",
-        "postalCode": "411007",
-        "addressCountry": "IN",
-        "name": "Registered Office"
-      },
-      "additionalProperty": [
-        {
-          "@type": "PropertyValue",
-          "name": "LLPIN",
-          "value": "ACT-9625"
-        },
-        {
-          "@type": "PropertyValue",
-          "name": "GSTIN",
-          "value": "27AAZFD2232J1Z3"
-        }
-      ],
-      "sameAs": [
-        "https://facebook.com",
-        "https://twitter.com",
-        "https://linkedin.com",
-        "https://instagram.com"
-      ]
-    }
-    </script>
-
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "SoftwareApplication",
-      "name": "Ai Bunty",
-      "applicationCategory": "BusinessApplication",
-      "operatingSystem": "Web",
-      "description": "AI-powered business growth platform with CRM, WhatsApp automation, funnels, and payment collection for Indian businesses.",
-      "offers": {
-        "@type": "Offer",
-        "price": "4999",
-        "priceCurrency": "INR"
-      }
-    }
-    </script>
+    <meta name="google-site-verification" content="[Google Verification Placeholder]" />
+    <meta name="facebook-domain-verification" content="[Meta Verification Placeholder]" />
   </head>
 
   <body>
